--- a/src/app/shared/ui/dropdown-popover/dropdown-popover.component.html
+++ b/src/app/shared/ui/dropdown-popover/dropdown-popover.component.html
@@ -40,7 +40,7 @@
             />
           </div>
 
-          <div class="dropdown-popover__list" [style.maxHeight.px]="hasSearch ? maxHeight - 56 : maxHeight">
+          <div class="dropdown-popover__list" [style.maxHeight.px]="hasSearch ? maxHeight - 72 : maxHeight - 16">
             <button
               type="button"
               class="dropdown-popover__item"
