--- a/src/app/layout/tasks/views/calendar-view/calendar-view.component.html
+++ b/src/app/layout/tasks/views/calendar-view/calendar-view.component.html
@@ -1,8 +1,10 @@
 <div class="tasks-view tasks-view--placeholder">
   <app-task-header [projectTitle]="'Calendar View'"></app-task-header>
-  <mat-icon>calendar_month</mat-icon>
-  <h2>Calendar View</h2>
-  <p>Plan and schedule your tasks on a calendar grid. This feature is coming soon.</p>
-  <button mat-flat-button color="primary" disabled>Coming Soon</button>
-</div>
 
+  <div class="placeholder-content">
+    <mat-icon>calendar_month</mat-icon>
+    <h2>Calendar View</h2>
+    <p>Plan and schedule your tasks on a calendar grid. This feature is coming soon.</p>
+    <button mat-flat-button color="primary" disabled>Coming Soon</button>
+  </div>
+</div>
