--- a/src/app/layout/tasks/views/timeline-view/timeline-view.component.html
+++ b/src/app/layout/tasks/views/timeline-view/timeline-view.component.html
@@ -1,8 +1,10 @@
 <div class="tasks-view tasks-view--placeholder">
   <app-task-header [projectTitle]="'Timeline View'"></app-task-header>
-  <mat-icon>timeline</mat-icon>
-  <h2>Timeline View</h2>
-  <p>Visual timelines and Gantt-style scheduling will arrive in a future update.</p>
-  <button mat-flat-button color="primary" disabled>Planned</button>
-</div>
 
+  <div class="placeholder-content">
+    <mat-icon>timeline</mat-icon>
+    <h2>Timeline View</h2>
+    <p>Visual timelines and Gantt-style scheduling will arrive in a future update.</p>
+    <button mat-flat-button color="primary" disabled>Planned</button>
+  </div>
+</div>
