--- a/src/app/layout/tasks/components/views/board-view/task-card/task-card.component.html
+++ b/src/app/layout/tasks/components/views/board-view/task-card/task-card.component.html
@@ -1,4 +1,4 @@
-<div class="task-card" cdkDragPreview>
+<div class="task-card">
     <!-- Header: checkbox + name -->
     <div class="task-header">
       <mat-checkbox
@@ -8,8 +8,8 @@
         class="task-checkbox"
       ></mat-checkbox>
   
-      <span class="task-name" [title]="task.name">
-        {{ task.name }}
+      <span class="task-name" [title]="task.title">
+        {{ task.title }}
       </span>
     </div>
   
@@ -17,27 +17,31 @@
     <div class="task-tags">
       <span
         class="pill priority-pill"
-        [ngClass]="task.priority.toLowerCase()"
-      >{{ task.priority }}</span>
+        [ngStyle]="getPriorityStyles()"
+      >
+        {{ task.priorityLabel?.name || 'No priority' }}
+      </span>
   
       <span
         class="pill status-pill"
-        [ngClass]="getStatusClass()"
-      >{{ task.status }}</span>
+        [ngStyle]="getStatusStyles()"
+      >
+        {{ task.status?.name || 'No status' }}
+      </span>
     </div>
   
     <!-- Footer: avatar + due date + attachments + more -->
     <div class="task-footer">
       <app-avatar
-        *ngIf="task.assigneeInitials"
+        *ngIf="getAssigneeInitials()"
         size="sm"
-        [initials]="task.assigneeInitials"
-        [color]="task.assigneeColor!"
+        [initials]="getAssigneeInitials()!"
+        [color]="task.assigneeColor || '#94a3b8'"
         class="assignee-avatar"
       ></app-avatar>
   
-      <span class="due-date" *ngIf="task.dueDate">
-        {{ task.dueDate }}
+      <span class="due-date" *ngIf="getDueDateLabel()">
+        {{ getDueDateLabel() }}
       </span>
   
       <!-- Attachment count (from screenshot) -->
